--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,27 @@
+body {
+  background-image: url("../images/drum.jpg")
+}
+
+.keys {
+  margin-top: 30vh;
+  /* border: 1px solid red; */
+  display: grid;
+  grid-template-columns: repeat(9,1fr);
+  grid-column-gap: 10px;
+}
+.key {
+  height: 12vh;
+  width: 12vh;
+  border: 2px solid blue;
+  border-radius: 9px;
+  color: white;
+  display: grid;
+  grid-template-rows: 1fr 1fr;
+}
 kbd {
-  color: blue;
+  text-align: center;
+  padding-top: 2vh;
+}
+span {
+  text-align: center;
 }
